--- a/bc_reader/android/loggermanager/app/src/main/res/layout-normal/activity_main.xml
+++ b/bc_reader/android/loggermanager/app/src/main/res/layout-normal/activity_main.xml
@@ -39,6 +39,7 @@
             android:id="@+id/main_settingsRadioButton"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:checked="true"
             android:tag="0"
             android:text="@string/main_radio_settings" />
@@ -47,6 +48,7 @@
             android:id="@+id/main_logsRadioButton"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/activity_small_margin"
             android:tag="1"
             android:text="@string/main_radio_logs" />
@@ -55,6 +57,7 @@
             android:id="@+id/main_autoTimeRadioButton"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/activity_small_margin"
             android:tag="2"
             android:text="@string/main_radio_auto_time" />
@@ -63,6 +66,7 @@
             android:id="@+id/main_consoleRadioButton"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/activity_small_margin"
             android:tag="3"
             android:text="@string/main_radio_console" />
