--- a/bc_reader/android/loggermanager/app/src/main/res/layout-small-land/activity_main.xml
+++ b/bc_reader/android/loggermanager/app/src/main/res/layout-small-land/activity_main.xml
@@ -384,55 +384,60 @@
                 </LinearLayout>
             </ScrollView>
 
-            <LinearLayout
-                android:id="@+id/main_autoUpdatePanel"
+            <ScrollView
+                android:id="@+id/main_autoTimeScrollView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/activity_small_margin"
-                android:orientation="vertical"
-                android:theme="@style/AppTheme">
+                android:layout_height="match_parent">
 
                 <LinearLayout
+                    android:id="@+id/main_autoUpdatePanel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical"
+                    android:theme="@style/AppTheme">
 
-                    <CheckBox
-                        android:id="@+id/main_autoUpdateTimeCheckBox"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="@string/main_auto_update_time" />
+                        android:orientation="horizontal">
+
+                        <CheckBox
+                            android:id="@+id/main_autoUpdateTimeCheckBox"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="@string/main_auto_update_time" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/activity_small_margin">
+
+                        <TextView
+                            android:layout_width="150dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="@string/main_update_period" />
+
+                        <EditText
+                            android:id="@+id/main_updatePeriodEditText"
+                            android:layout_width="150dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:ems="10"
+                            android:inputType="number"
+                            android:maxLength="2" />
+                    </LinearLayout>
+
+                    <TableLayout
+                        android:id="@+id/main_loggersSelectPanel"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp">
+
+                    </TableLayout>
                 </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_small_margin">
-
-                    <TextView
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="@string/main_update_period" />
-
-                    <EditText
-                        android:id="@+id/main_updatePeriodEditText"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:ems="10"
-                        android:inputType="number"
-                        android:maxLength="2" />
-                </LinearLayout>
-
-                <TableLayout
-                    android:id="@+id/main_loggersSelectPanel"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp">
-
-                </TableLayout>
-            </LinearLayout>
+            </ScrollView>
 
         </ViewFlipper>
 
