--- a/datacollector/datacollector_tablet/app/src/main/res/layout/settings.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/layout/settings.xml
@@ -174,6 +174,25 @@
                     android:text=""
                     android:textAppearance="?android:attr/textAppearanceMedium" />
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/global_padding">
+
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_need_check_crc"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <CheckBox
+                    android:id="@+id/settings_needCheckCrcCheck"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
