--- a/SportiduinoManager/app/src/main/res/layout/activity_bluetooth.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_bluetooth.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout
         android:id="@+id/device_search_frame"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -17,6 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/station_status"
         app:layout_constraintVertical_bias="0.5">
 
         <Button
@@ -53,7 +54,7 @@
         android:id="@+id/station_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="connected_station,station_bt_name,station_bt_response,station_mode,station_mode_value,station_number,station_time_drift,station_sync_time,station_chips_registered,station_chips_registered_value,station_last_chip,station_last_chip_time" />
+        app:constraint_referenced_ids="connected_station,station_bt_name,station_bt_response,station_mode,station_mode_value,station_new_mode,station_spinner,station_change_mode,station_time_drift,station_sync_time,station_chips_registered,station_chips_registered_value,station_last_chip,station_last_chip_time" />
 
     <TextView
         android:id="@+id/connected_station"
@@ -110,16 +111,37 @@
         app:layout_constraintTop_toBottomOf="@+id/station_mode" />
 
     <TextView
-        android:id="@+id/station_number"
+        android:id="@+id/station_new_mode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_padding"
-        android:text="@string/station_number"
+        android:text="@string/station_new_mode"
         android:textColor="@color/text_primary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/station_mode_value" />
+
+    <Spinner
+        android:id="@+id/station_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/station_new_mode" />
+
+    <Button
+        android:id="@+id/station_change_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:onClick="changeStationMode"
+        android:text="@string/station_change_mode"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/station_spinner" />
 
     <TextView
         android:id="@+id/station_time_drift"
@@ -131,7 +153,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/station_number" />
+        app:layout_constraintTop_toBottomOf="@+id/station_change_mode" />
 
     <Button
         android:id="@+id/station_sync_time"
