--- a/SportiduinoManager/app/src/main/res/values-ru/errors.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/errors.xml
@@ -21,4 +21,5 @@
     <string name="err_bt_receive_bad_response">Некорректный ответ станции</string>
     <string name="err_bt_receive_command_failed">Ошибка выполнения команды станцией</string>
     <string name="err_bt_response_wrong_length">Неправильная длина ответа станции</string>
+    <string name="err_bt_bad_point_number">Некорректный номер активной точки</string>
 </resources>
