--- a/SportiduinoManager/app/src/main/res/values/errors.xml
+++ b/SportiduinoManager/app/src/main/res/values/errors.xml
@@ -22,4 +22,7 @@
     <string name="err_bt_receive_command_failed">Station command execution failed</string>
     <string name="err_bt_response_wrong_length">Station response has wrong length</string>
     <string name="err_bt_bad_point_number">Incorrect number of active point</string>
+
+    <string name="err_init_no_distance_loaded">Distance was not loaded from site</string>
+    <string name="err_init_no_such_team">No team with this number</string>
 </resources>
