--- a/SportiduinoManager/app/src/main/res/layout/activity_database.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_database.xml
@@ -1,139 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:local="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
-    <FrameLayout
-        android:id="@+id/database_status"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/default_padding"
-        android:paddingTop="@dimen/default_padding"
-        android:paddingRight="@dimen/default_padding"
-        android:paddingBottom="0dip">
-
-        <TextView
-            android:id="@+id/database_status_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/database_status_unknown" />
-
-        <ProgressBar
-            android:id="@+id/database_status_progress"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="invisible" />
-
-    </FrameLayout>
-
-
-    <LinearLayout
-        android:id="@+id/database_actions_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/database_status"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical"
-        android:padding="@dimen/default_padding">
-
-        <Button
-            android:id="@+id/send_results"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="false"
-            android:padding="@dimen/default_padding"
-            android:text="@string/send_results" />
-
-        <Button
-            android:id="@+id/get_results"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="false"
-            android:padding="@dimen/default_padding"
-            android:text="@string/download_results" />
-
-        <LinearLayout
-            android:id="@+id/download_distance_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:focusableInTouchMode="true"
-            android:orientation="vertical">
-
-            <EditText
-                android:id="@+id/user_email"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:autofillHints="email"
-                android:hint="@string/email"
-                android:inputType="textEmailAddress"
-                android:padding="@dimen/default_padding"
-                local:targetApi="28" />
-
-            <EditText
-                android:id="@+id/user_password"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:autofillHints="password"
-                android:hint="@string/password"
-                android:inputType="textPassword"
-                android:padding="@dimen/default_padding"
-                local:targetApi="28" />
-
-            <android.support.v7.widget.SwitchCompat
-                android:id="@+id/test_database"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:checked="false"
-                android:padding="@dimen/default_padding"
-                android:text="@string/use_test_site"
-                local:showText="false" />
-
-            <Button
-                android:id="@+id/download_distance"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:onClick="startDistanceDownload"
-                android:padding="@dimen/default_padding"
-                android:text="@string/download_distance" />
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/database_content_layout"
+    <RelativeLayout xmlns:local="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/database_actions_layout"
-        android:layout_alignParentStart="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="@dimen/default_padding">
+        android:layout_height="wrap_content">
 
-        <View style="@style/Divider" />
-
-        <TextView
-            android:id="@+id/distance_name"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:id="@+id/database_status"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/default_padding"
             android:paddingTop="@dimen/default_padding"
             android:paddingRight="@dimen/default_padding"
-            android:text="@string/unknown" />
+            android:paddingBottom="0dip">
 
-        <TextView
-            android:id="@+id/distance_version"
+            <TextView
+                android:id="@+id/database_status_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/database_status_unknown" />
+
+            <ProgressBar
+                android:id="@+id/database_status_progress"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="invisible" />
+
+        </FrameLayout>
+
+
+        <LinearLayout
+            android:id="@+id/database_actions_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:paddingLeft="@dimen/default_padding"
-            android:paddingRight="@dimen/default_padding"
-            android:text="@string/unknown" />
+            android:layout_below="@id/database_status"
+            android:layout_centerHorizontal="true"
+            android:orientation="vertical"
+            android:padding="@dimen/default_padding">
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/send_results"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clickable="false"
+                android:padding="@dimen/default_padding"
+                android:text="@string/send_results" />
 
-</RelativeLayout>
+            <Button
+                android:id="@+id/get_results"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clickable="false"
+                android:padding="@dimen/default_padding"
+                android:text="@string/download_results" />
+
+            <LinearLayout
+                android:id="@+id/download_distance_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:focusableInTouchMode="true"
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/user_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:autofillHints="email"
+                    android:hint="@string/email"
+                    android:inputType="textEmailAddress"
+                    android:padding="@dimen/default_padding"
+                    local:targetApi="28" />
+
+                <EditText
+                    android:id="@+id/user_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:autofillHints="password"
+                    android:hint="@string/password"
+                    android:inputType="textPassword"
+                    android:padding="@dimen/default_padding"
+                    local:targetApi="28" />
+
+                <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/test_database"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:checked="false"
+                    android:padding="@dimen/default_padding"
+                    android:text="@string/use_test_site"
+                    local:showText="false" />
+
+                <Button
+                    android:id="@+id/download_distance"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:onClick="startDistanceDownload"
+                    android:padding="@dimen/default_padding"
+                    android:text="@string/download_distance" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/database_content_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/database_actions_layout"
+            android:layout_alignParentStart="true"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="@dimen/default_padding">
+
+            <View style="@style/Divider" />
+
+            <TextView
+                android:id="@+id/distance_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/default_padding"
+                android:paddingTop="@dimen/default_padding"
+                android:paddingRight="@dimen/default_padding"
+                android:text="@string/unknown" />
+
+            <TextView
+                android:id="@+id/distance_version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:paddingLeft="@dimen/default_padding"
+                android:paddingRight="@dimen/default_padding"
+                android:text="@string/unknown" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</ScrollView>
