--- a/SportiduinoManager/app/src/main/res/values/dimens.xml
+++ b/SportiduinoManager/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 
 <resources>
     <dimen name="default_padding">16dip</dimen>
+    <dimen name="default_key_button_width">64dip</dimen>
 </resources>
