--- a/SportiduinoManager/app/src/main/res/layout/menu_header.xml
+++ b/SportiduinoManager/app/src/main/res/layout/menu_header.xml
@@ -11,7 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="?android:selectableItemBackground"
         android:contentDescription="@string/menu_back"
         android:onClick="closeNavigationDrawer"
         android:paddingStart="?attr/listPreferredItemPaddingLeft"
@@ -26,7 +25,6 @@
         android:layout_marginEnd="?attr/listPreferredItemPaddingRight"
         android:gravity="start|center_vertical"
         android:singleLine="true"
-        android:text="@string/navigation_header"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title" />
+        android:text="@string/navigation_header"/>
 
 </RelativeLayout>
